Checkbox fix
checkboxes weren't working. Newsletter legend was covering them up

--- a/css/styles.css
+++ b/css/styles.css
@@ -157,7 +157,7 @@ NEWSLETTER
 ***************/
 
 #newsletterInfo {
-  bottom: -11em;
+  top: 58em;
 }
 
 .newsletterSection {
